--- a/Dev/Warewolf.Resource/Errors/ErrorResource.resx
+++ b/Dev/Warewolf.Resource/Errors/ErrorResource.resx
@@ -765,6 +765,9 @@
   <data name="MultipleResourcesFound" xml:space="preserve">
     <value>Multiple Resources found for Resource ID: {0}</value>
   </data>
+  <data name="NoResourcesFound" xml:space="preserve">
+    <value>No Resources found for Resource ID: {0}</value>
+  </data>
   <data name="MustBeRealNumber" xml:space="preserve">
     <value>must be a real number</value>
   </data>
@@ -1309,5 +1312,29 @@ Please contact your Windows System Administrator.</value>
   </data>
   <data name="JSONIncompatibleConversionError" xml:space="preserve">
     <value>Cannot convert given JSON to target type</value>
+  </data>
+  <data name="ServerBusyError" xml:space="preserve">
+    <value>{0} is currently busy. Please try again later.</value>
+  </data>
+  <data name="ServerBusyHeader" xml:space="preserve">
+    <value>Server is currently busy</value>
+  </data>
+  <data name="CaseConvertInputInvalidExpressionErrorTest" xml:space="preserve">
+    <value>'StringToConvert' - Result - Invalid expression: opening and closing brackets don't match</value>
+  </data>
+  <data name="BaseConvertInputInvalidExpressionErrorTest" xml:space="preserve">
+    <value>'FromExpression' - Result - Invalid expression: opening and closing brackets don't match</value>
+  </data>
+  <data name="GatherSystemInfoInputInvalidExpressionErrorTest" xml:space="preserve">
+    <value>Result - Invalid expression: opening and closing brackets don't match</value>
+  </data>
+  <data name="SwitchNoDefaultError" xml:space="preserve">
+    <value>Failed: Switch must have a Default arm connected.</value>
+  </data>
+  <data name="UserNotAuthorizedToExecuteException" xml:space="preserve">
+    <value>User: {0} does not have Execute Permission to resource {1}.</value>
+  </data>
+  <data name="UserNotAuthorizedToExecuteOuterWorkflowException" xml:space="preserve">
+    <value>User: {0} requires View and Execute permissions to Execute resource {1}.</value>
   </data>
 </root>
